# dragable-table

./: .gitignore  README.md  pyproject.toml
ebgTask/api/: main.py
static/: scripts.js  styles.css
templates/: index.html
