[tool.poetry]
name = "ebgTask"
version = "0.1.0"
description = ""
authors = ["hivinpolat <hivinpolat_3823@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
pydantic = "^2.3.0"

[tool.poetry.scripts]
app = "ebgTask.api.main:main"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
